// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginForm /> @render Log In should render the Loader component when attempting to login 1`] = `
<ScrollView>
  <View
    onLayout={[Function]}
  >
    <View
      style={
        Object {
          "bottom": 0,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../app/assets/images/logo-resized.png",
          }
        }
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#2D2A4A",
            "borderRadius": 100,
            "marginBottom": 10,
          }
        }
      />
      <TextInput
        allowFontScaling={true}
        keyboardType="email-address"
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="Email"
        placeholderTextColor="grey"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "marginBottom": 10,
              "padding": 5,
            },
            undefined,
          ]
        }
        testID="email"
        underlineColorAndroid="transparent"
        value="test@mail.com"
      />
      <TextInput
        allowFontScaling={true}
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="Password"
        placeholderTextColor="grey"
        rejectResponderTermination={true}
        secureTextEntry={true}
        style={
          Array [
            Object {
              "marginBottom": 10,
              "padding": 5,
            },
            undefined,
          ]
        }
        testID="password"
        underlineColorAndroid="transparent"
        value="123456"
      />
      <View
        testID="loader"
      >
        <ActivityIndicator
          animating={true}
          color="#0000ff"
          hidesWhenStopped={true}
          size="large"
        />
      </View>
    </View>
  </View>
</ScrollView>
`;

exports[`<LoginForm /> @render Log In should render the LoginScreen component 1`] = `
<ScrollView>
  <View
    onLayout={[Function]}
  >
    <View
      style={
        Object {
          "bottom": 0,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../app/assets/images/logo-resized.png",
          }
        }
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#2D2A4A",
            "borderRadius": 100,
            "marginBottom": 10,
          }
        }
      />
      <TextInput
        allowFontScaling={true}
        keyboardType="email-address"
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="Email"
        placeholderTextColor="grey"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "marginBottom": 10,
              "padding": 5,
            },
            undefined,
          ]
        }
        testID="email"
        underlineColorAndroid="transparent"
        value=""
      />
      <TextInput
        allowFontScaling={true}
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="Password"
        placeholderTextColor="grey"
        rejectResponderTermination={true}
        secureTextEntry={true}
        style={
          Array [
            Object {
              "marginBottom": 10,
              "padding": 5,
            },
            undefined,
          ]
        }
        testID="password"
        underlineColorAndroid="transparent"
        value=""
      />
      <
        onPress={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#2D2A4A",
              "borderRadius": 10,
              "height": 40,
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <Text
          accessibilityLabel="submit-button"
          style={
            Array [
              Object {
                "color": "#F4F5F8",
                "fontSize": 20,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          SUBMIT
        </Text>
      </>
      <Button
        onPress={[Function]}
        title="Log In"
      />
    </View>
  </View>
</ScrollView>
`;

exports[`<LoginForm /> @render Log In should render the error component if email is missing 1`] = `
<ScrollView>
  <View
    onLayout={[Function]}
  >
    <View
      style={
        Object {
          "bottom": 0,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../app/assets/images/logo-resized.png",
          }
        }
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#2D2A4A",
            "borderRadius": 100,
            "marginBottom": 10,
          }
        }
      />
      <TextInput
        allowFontScaling={true}
        keyboardType="email-address"
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="Email"
        placeholderTextColor="grey"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "marginBottom": 10,
              "padding": 5,
            },
            undefined,
          ]
        }
        testID="email"
        underlineColorAndroid="transparent"
        value=""
      />
      <TextInput
        allowFontScaling={true}
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="Password"
        placeholderTextColor="grey"
        rejectResponderTermination={true}
        secureTextEntry={true}
        style={
          Array [
            Object {
              "marginBottom": 10,
              "padding": 5,
            },
            undefined,
          ]
        }
        testID="password"
        underlineColorAndroid="transparent"
        value="123456"
      />
      <
        onPress={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#2D2A4A",
              "borderRadius": 10,
              "height": 40,
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <Text
          accessibilityLabel="submit-button"
          style={
            Array [
              Object {
                "color": "#F4F5F8",
                "fontSize": 20,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          SUBMIT
        </Text>
      </>
      <Button
        onPress={[Function]}
        title="Log In"
      />
      <View
        style={
          Object {
            "padding": 10,
          }
        }
      >
        <Text
          accessibilityLabel="error-msg"
          style={
            Object {
              "color": "#A51931",
            }
          }
        >
          Email is required
        </Text>
      </View>
    </View>
  </View>
</ScrollView>
`;

exports[`<LoginForm /> @render Sign Up should render the Loader component when attempting to signup 1`] = `
<ScrollView>
  <View
    onLayout={[Function]}
  >
    <View
      style={
        Object {
          "bottom": 0,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../app/assets/images/logo-resized.png",
          }
        }
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#2D2A4A",
            "borderRadius": 100,
            "marginBottom": 10,
          }
        }
      />
      <TextInput
        allowFontScaling={true}
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="Username"
        placeholderTextColor="grey"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "marginBottom": 10,
              "padding": 5,
            },
            undefined,
          ]
        }
        testID="username"
        underlineColorAndroid="transparent"
        value="MyUsername"
      />
      <TextInput
        allowFontScaling={true}
        keyboardType="email-address"
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="Email"
        placeholderTextColor="grey"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "marginBottom": 10,
              "padding": 5,
            },
            undefined,
          ]
        }
        testID="email"
        underlineColorAndroid="transparent"
        value="test@mail.com"
      />
      <TextInput
        allowFontScaling={true}
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="Password"
        placeholderTextColor="grey"
        rejectResponderTermination={true}
        secureTextEntry={true}
        style={
          Array [
            Object {
              "marginBottom": 10,
              "padding": 5,
            },
            undefined,
          ]
        }
        testID="password"
        underlineColorAndroid="transparent"
        value="123456"
      />
      <TextInput
        allowFontScaling={true}
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="Confirm Password"
        placeholderTextColor="grey"
        rejectResponderTermination={true}
        secureTextEntry={true}
        style={
          Array [
            Object {
              "marginBottom": 10,
              "padding": 5,
            },
            undefined,
          ]
        }
        testID="confirm-password"
        underlineColorAndroid="transparent"
        value="123456"
      />
      <View
        testID="loader"
      >
        <ActivityIndicator
          animating={true}
          color="#0000ff"
          hidesWhenStopped={true}
          size="large"
        />
      </View>
    </View>
  </View>
</ScrollView>
`;

exports[`<LoginForm /> @render Sign Up should render the SignUp component 1`] = `
<ScrollView>
  <View
    onLayout={[Function]}
  >
    <View
      style={
        Object {
          "bottom": 0,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../app/assets/images/logo-resized.png",
          }
        }
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#2D2A4A",
            "borderRadius": 100,
            "marginBottom": 10,
          }
        }
      />
      <TextInput
        allowFontScaling={true}
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="Username"
        placeholderTextColor="grey"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "marginBottom": 10,
              "padding": 5,
            },
            undefined,
          ]
        }
        testID="username"
        underlineColorAndroid="transparent"
        value=""
      />
      <TextInput
        allowFontScaling={true}
        keyboardType="email-address"
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="Email"
        placeholderTextColor="grey"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "marginBottom": 10,
              "padding": 5,
            },
            undefined,
          ]
        }
        testID="email"
        underlineColorAndroid="transparent"
        value=""
      />
      <TextInput
        allowFontScaling={true}
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="Password"
        placeholderTextColor="grey"
        rejectResponderTermination={true}
        secureTextEntry={true}
        style={
          Array [
            Object {
              "marginBottom": 10,
              "padding": 5,
            },
            undefined,
          ]
        }
        testID="password"
        underlineColorAndroid="transparent"
        value=""
      />
      <TextInput
        allowFontScaling={true}
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="Confirm Password"
        placeholderTextColor="grey"
        rejectResponderTermination={true}
        secureTextEntry={true}
        style={
          Array [
            Object {
              "marginBottom": 10,
              "padding": 5,
            },
            undefined,
          ]
        }
        testID="confirm-password"
        underlineColorAndroid="transparent"
        value=""
      />
      <
        onPress={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#2D2A4A",
              "borderRadius": 10,
              "height": 40,
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <Text
          accessibilityLabel="submit-button"
          style={
            Array [
              Object {
                "color": "#F4F5F8",
                "fontSize": 20,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          SUBMIT
        </Text>
      </>
      <Button
        onPress={[Function]}
        title="Log In"
      />
    </View>
  </View>
</ScrollView>
`;
